<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wild Quest</string>
    <string name="puntosText">Puntuación: </string>
    <string name="titulo">Wild Quest</string>
    <string name="puntos">0</string>
    <string name="respuesta">Selecciona una respuesta</string>
    <string name="addPregunta">Añadir nueva pregunta</string>


    <string name="escribirPregunta">Escribir pregunta</string>
    <string name="respuesta1">Escribir respuesta 1</string>
    <string name="respuesta2">Escribir respuesta 2</string>
    <string name="respuesta3">Escribir respuesta 3</string>
    <string name="respuesta4">Escribir respuesta 4</string>
    <string name="correcto">Escribir respuesta correcta</string>


    <!--Botones-->
    <string name="buttonVolver">Volver</string>
    <string name="buttonSilenciar">Silenciar música</string>
    <string name="buttonSiguiente">Siguiente</string>
    <string name="buttonJugar">Jugar</string>
    <string name="buttonSalir">Salir</string>
    <string name="buttonTucan"> </string>

    <string name="buttonManual">Manual</string>
    <string name="buttonAdd">Add</string>


    <!-- Pregunta 1 -->
    <string name="p1">¿Cuál de los siguientes animales es un marsupial?</string>

    <string name="r11">Koala</string> <!--Correcta-->
    <string name="r12">Tigre</string>
    <string name="r13">Lobo</string>
    <string name="r14">Vaca</string>


    <!--Pregunta 2-->
    <string name="p2">¿Cuál es el animal más rápido del mundo?</string>

    <string name="r21">Guepardo</string> <!--Correcta-->
    <string name="r22">Águila</string>
    <string name="r23">Caballo</string>
    <string name="r24">Liebre</string>


    <!--Pregunta 3-->
    <string name="p3">¿Qué ave es conocida por su canto melodioso?</string>

    <string-array name="tus_elementos">
        <item>Cuervo</item>
        <item>Gorrión</item>
        <item>Ruiseñor</item><!--Correcta-->
        <item>Tucán</item>
    </string-array>


    <!-- Pregunta 4-->
    <string name="p4">¿Cuál es el mamífero más grande del mundo?</string>

    <string name="r41">Elefante</string>
    <string name="r42">Ballena azul</string> <!-- Correcta-->
    <string name="r43">Jirafa</string>
    <string name="r44">Rinoceronte</string>


    <!-- Pregunta 5-->
    <string name="p5">¿Cuál de estos animales es venenoso?</string>

    <string name="r51">Sapo</string> <!-- Correcta-->
    <string name="r52">Rana</string>
    <string name="r53">Salamandra</string>
    <string name="r54">Tortuga</string>

    <!-- Manual con todos sus strings declarados-->
    <string name="Manual">Manual</string>

    <string name="Menu">Menu</string>
    <string name="Sonido">Sonido</string>
    <string name="txtSonido">El sonido se ubica en la esquina superior izquierda y sirve para mutearlo o volver a ponerlo presionando sobre el</string>
    <string name="AddPregunta">Añadir pregunta</string>
    <string name="txtAñadirPreguntas">El icono se ubica en la esquina superior derecha y sirve para ir a una pagina donde añadir preguntas a la base de datos</string>
    <string name="Tucan">Tucan</string>
    <string name="txtTucan">Botón oculto creado para los más curiosos que genera el sonido de un tucán</string>
    <string name="Puntuacion">Puntuacion</string>
    <string name="txtPuntuacion">Indica la puntuación del jugador en su último intento</string>
    <string name="Jugar">Jugar</string>
    <string name="txtJugar">Al pulsar inicia la quest de preguntas</string>
    <string name="Manualm">Manual</string>
    <string name="txtManual">Al pulsarlo nos lleva al manual para conocer el funcionamiento de la aplicación</string>
    <string name="Salir">Salir</string>
    <string name="txtSalir">Al pulsar nos saca de la aplicación cerrando todos los procesos, música incluida</string>
    <string name="Preguntas">Preguntas</string>
    <string name="Pregunta">Pregunta</string>
    <string name="txtPregunta">En este apartado se harán las preguntas</string>
    <string name="RespuestaT1">Respuesta Tipo 1</string>
    <string name="txtRespuesta">Cuatro Radiobuttons de los que solo puedes elegir una opción que se validará con un sonido y un pequeño texto</string>
    <string name="RespuestaT2">Respuesta Tipo 2</string>
    <string name="txtRespuestaT2">Este es otro tipo de respuesta que consiste en elegir una imagen de cuatro para responder a la pregunta en cuestión</string>
    <string name="RespuestaT3">Respuesta Tipo 3</string>
    <string name="txtRespuestaT3">Este es el último tipo de pregunta, consiste en un spinner desplegable con cuatro opciones para responder a la pregunta</string>
    <string name="IconoVolver">Icono Volver</string>
    <string name="txtVolver" tools:ignore="Typos">Este icono te permite volver al menú en cualquier momento,conservando eso sí tu puntuación actual</string>
    <string name="IconoSiguiente">Icono Siguiente</string>
    <string name="txtSiguiente">Este es el último tipo de pregunta, consiste en un spinner desplegable con cuatro opciones para responder a la pregunta</string>
    <string name="MenuAddPregunta">Menú añadir pregunta</string>
    <string name="AddMenuPregunta">Añadir pregunta</string>
    <string name="txtAddPregunta">Añadir los campos de la pregunta y las respuestas, agregando la correcta de las cuatro propuestas</string>
    <string name="Volver">Volver</string>
    <string name="txtVolverMenu">Al pulsarlo te permite volver al menú si no quieres seguir en la pantalla</string>
    <string name="Guardar">Guardar</string>
    <string name="txtGuardar">Al pulsarlo te permite guardar en la base de datos la pregunta creada por el usuario</string>






    <!--AddPreguntas con todos sus strings declarados-->
    <string name="buttonGuardar">Guardar</string>


</resources>