<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoquest"
    tools:context=".Pregunta1">

    <TextView
        android:id="@+id/p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/p1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p4">


        <RadioButton
            android:id="@+id/r11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="2sp"
            android:text="@string/r11"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/r12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="2sp"
            android:text="@string/r12"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/r13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="2sp"
            android:text="@string/r13"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/r14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:padding="2sp"
            android:text="@string/r14"
            android:textSize="28sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>